card caption updated

--- a/index.html
+++ b/index.html
@@ -134,9 +134,190 @@
                 <p class="card__lang-text">
                   HTML / SASS / PHP
                 </p>
+                <p class="card__text">
+                  Clean and modern WordPress blog theme targeted for chefs.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/build-it.png"
+                alt="Build It PHP App"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Build It App</h2>
+                <h3 class="card__subtitle">PHP & MySQL Site-App</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / CSS / Materialize / PHP / MySQL
+                </p>
+                <p class="card__text">
+                  Add exercises to a database to build your own workout session.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/holder.png"
+                alt="Saint Lorem WordPress theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Saint Lorem Architecture</h2>
+                <h3 class="card__subtitle">Custom WordPress Theme</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / PHP
+                </p>
+                <p class="card__text">
+                  Stylish WordPress theme for architecture and interior design
+                  firm.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://weather-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/play-atx.png"
+                alt="Play ATX site"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Play ATX Website</h2>
+                <h3 class="card__subtitle">Custom Static Website</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / JS Parallax
+                </p>
+                <p class="card__text">
+                  Playful and informational single page business website.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://play-atx.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://github.com/mega-bailey/play-atx"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/six-sense.png"
+                alt="Six Sense ecommerce site"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Six Sense Website</h2>
+                <h3 class="card__subtitle">Ecommerce Site</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SASS / JS
+                </p>
+                <p class="card__text">
+                  Vanilla JS ecommerce page with shopping cart.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://6sense.netlify.app/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://github.com/mega-bailey/6sense"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/weather-wise.png"
+                alt="Weather-Wise App"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Weather-Wise App</h2>
+                <h3 class="card__subtitle">Weather App</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / CSS / JS & jQuery / Darksky API / Google Places API
+                </p>
 
                 <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
+                  Searchable location with 7-day forecast.
                 </p>
                 <div class="btn-container margin-top-s">
                   <a
@@ -147,187 +328,7 @@
                     Demo</a
                   >
                   <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/holder.png"
-                alt="Chef Blog WordPress Theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Chef Collier Blog</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/holder.png"
-                alt="Chef Blog WordPress Theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Chef Collier Blog</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/holder.png"
-                alt="Chef Blog WordPress Theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Chef Collier Blog</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/holder.png"
-                alt="Chef Blog WordPress Theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Chef Collier Blog</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/holder.png"
-                alt="Chef Blog WordPress Theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Chef Collier Blog</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
+                    href="https://github.com/mega-bailey/weather-mlb"
                     target="_blank"
                     class="btn btn__text"
                   >
