--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
           <div class="column">
             <p class="paragraph">
-              I design and build custom, responsive websites and applications,
-              including custom WordPress themes. I have a solid understanding of
-              HTML, CSS, SASS, Git, WordPress, Photoshop, and Illustrator. I
-              also have a great foundational understanding of PHP, Javascript,
-              jQuery, and InDesign. I am forever learning.
+              I design and build custom, responsive websites and applications. I
+              have a solid understanding of HTML, CSS, SASS, Git, WordPress,
+              Photoshop, and Illustrator. I also have a great foundational
+              understanding of PHP, Javascript, jQuery, and InDesign. I am
+              forever learning.
             </p>
           </div>
 
@@ -84,9 +84,8 @@
               >
               I'd like to apply my experience in both customer service and web
               development, while continuing to learn and expand my developer
-              skills. I am a level-headed, self-motivated, and resourceful
-              person. If I don’t know how to do something, I utilize my
-              resources and figure it out.
+              skills. <br />I am a level-headed, positive-minded,
+              self-motivated, and resourceful person.
             </p>
           </div>
         </div>
@@ -123,125 +122,16 @@
           <div class="cards-block">
             <div class="card">
               <img
-                src="img/holder.png"
-                alt="Chef Blog WordPress Theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Chef Collier Blog</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Clean and modern WordPress blog theme targeted for chefs.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/build-it.png"
-                alt="Build It PHP App"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Build It App</h2>
-                <h3 class="card__subtitle">PHP & MySQL Site-App</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / CSS / Materialize / PHP / MySQL
-                </p>
-                <p class="card__text">
-                  Add exercises to a database to build your own workout session.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/holder.png"
-                alt="Saint Lorem WordPress theme"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Saint Lorem Architecture</h2>
-                <h3 class="card__subtitle">Custom WordPress Theme</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / SASS / PHP
-                </p>
-                <p class="card__text">
-                  Stylish WordPress theme for architecture and interior design
-                  firm.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href="https://weather-mlb.herokuapp.com/"
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="cards-block">
-            <div class="card">
-              <img
                 src="img/play-atx.png"
                 alt="Play ATX site"
                 class="card__img"
               />
               <div class="card__details">
-                <h2 class="card__title">Play ATX Website</h2>
+                <h2 class="card__title">Play ATX</h2>
                 <h3 class="card__subtitle">Custom Static Website</h3>
                 <hr />
                 <p class="card__lang-text">
-                  HTML / SASS / JS Parallax
+                  HTML / SCSS / JS Parallax
                 </p>
                 <p class="card__text">
                   Playful and informational single page business website.
@@ -273,11 +163,11 @@
                 class="card__img"
               />
               <div class="card__details">
-                <h2 class="card__title">Six Sense Website</h2>
-                <h3 class="card__subtitle">Ecommerce Site</h3>
+                <h2 class="card__title">Six Sense</h2>
+                <h3 class="card__subtitle">Ecommerce Website</h3>
                 <hr />
                 <p class="card__lang-text">
-                  HTML / SASS / JS
+                  HTML / SCSS / JS
                 </p>
                 <p class="card__text">
                   Vanilla JS ecommerce page with shopping cart.
@@ -304,16 +194,88 @@
           <div class="cards-block">
             <div class="card">
               <img
+                src="img/union-hill.png"
+                alt="Chef Blog WordPress Theme"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Union Hill</h2>
+                <h3 class="card__subtitle">Custom Static Website</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SCSS
+                </p>
+                <p class="card__text">
+                  Multi-page website for a cocktail bar and lounge.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://mega-bailey.github.io/union-hill/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://github.com/mega-bailey/union-hill"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/build-it.png"
+                alt="Build It PHP App"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Build It</h2>
+                <h3 class="card__subtitle">PHP & MySQL Site-App</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / CSS / Materialize / PHP / MySQL
+                </p>
+                <p class="card__text">
+                  Add exercises to a database to build your own workout session.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href=""
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href=""
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div> -->
+          <div class="cards-block">
+            <div class="card">
+              <img
                 src="img/weather-wise.png"
                 alt="Weather-Wise App"
                 class="card__img"
               />
               <div class="card__details">
-                <h2 class="card__title">Weather-Wise App</h2>
+                <h2 class="card__title">Weather-Wise</h2>
                 <h3 class="card__subtitle">Weather App</h3>
                 <hr />
                 <p class="card__lang-text">
-                  HTML / CSS / JS & jQuery / Darksky API / Google Places API
+                  HTML / CSS / JS / jQuery / Darksky API / Google Places API
                 </p>
 
                 <p class="card__text">
@@ -329,6 +291,42 @@
                   >
                   <a
                     href="https://github.com/mega-bailey/weather-mlb"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
+                src="img/habitual.png"
+                alt="Habitual app"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Habitual</h2>
+                <h3 class="card__subtitle">Habit Tracking App</h3>
+                <hr />
+                <p class="card__lang-text">
+                  HTML / SCSS / JS / jQuery
+                </p>
+                <p class="card__text">
+                  Simple app to help track your habits.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://habitual-app-mlb.herokuapp.com/"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://github.com/mega-bailey/habitual"
                     target="_blank"
                     class="btn btn__text"
                   >
