--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/css/style.min.css" />
+    <link rel="icon" type="image/png" href="img/circle-logo-bg.png" />
     <title>Megan Bailey | Web Developer</title>
   </head>
   <body>
