--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
               <strong
                 >I'm currently looking for a <em>remote</em> technical or
                 developer support role.</strong
-              >
-              I'd like to apply my experience in both customer service and web
+              >I'd like to apply my experience in both customer service and web
               development, while continuing to learn and expand my developer
               skills. <br />I am a level-headed, positive-minded,
               self-motivated, and resourceful person.
