--- a/index.html
+++ b/index.html
@@ -79,14 +79,11 @@
 
           <div class="column">
             <p class="paragraph">
-              <strong
-                >I'm currently looking for a <em>remote</em> technical or
-                developer support role.</strong
-              >
-              I'd like to apply my experience in both customer service and web
-              development, while continuing to learn and expand my developer
-              skills. <br />I am a level-headed, positive-minded,
-              self-motivated, and resourceful person.
+              I'm currently looking for a remote technical or developer support
+              role. I'd like to apply my experience in both customer service and
+              web development, while continuing to learn and expand my developer
+              skills. I am a level-headed, positive-minded, self-motivated, and
+              resourceful person.
             </p>
           </div>
         </div>
