--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
 
           <div class="column">
             <p class="paragraph">
-              I'm currently looking for a remote technical or developer support
-              role. I'd like to apply my experience in both customer service and
-              web development, while continuing to learn and expand my developer
+              <span class="bold"
+                >I'm currently looking for a remote technical or developer
+                support role.
+              </span>
+              I'd like to apply my experience in both customer service and web
+              development, while continuing to learn and expand my developer
               skills. I am a level-headed, positive-minded, self-motivated, and
               resourceful person.
             </p>
