Update meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Megan Bailey Personal Portfolio" />
+    <meta
+      property="og:image"
+      content="https://www.megan-bailey.com/megan-bailey-ogimg"
+    />
+    <meta
+      property="og:description"
+      content="Front-end web developer with loads of experience in customer service"
+    />
+    <meta property="og:url" content="https://www.megan-bailey.com" />
+    <meta property="og:site_name" content="MeganBailey.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
