Update meta og img

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Megan Bailey Personal Portfolio" />
-    <meta
-      property="og:image"
-      content="https://www.megan-bailey.com/megan-bailey-ogimg"
-    />
+    <meta property="og:image" content="https://i.imgur.com/qkINOR5.png" />
     <meta
       property="og:description"
       content="Front-end web developer with loads of experience in customer service"
