--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
           <div class="column">
             <p class="paragraph">
-              I design and build custom, responsive websites and applications. I
-              have a solid understanding of HTML, CSS, SASS, Git, WordPress,
-              Photoshop, and Illustrator. I also have a great foundational
-              understanding of PHP, Javascript, jQuery, and InDesign. I am
-              forever learning.
+              I design and build custom sites, including custom WordPress themes
+              and sites. I have a solid understanding of HTML, CSS, SASS, Git,
+              WordPress, Photoshop, and Illustrator. I also have a great
+              foundational understanding of PHP, Javascript, jQuery, and
+              InDesign. I am forever learning.
             </p>
           </div>
 
@@ -137,7 +137,7 @@
               />
               <div class="card__details">
                 <h2 class="card__title">Play ATX</h2>
-                <h3 class="card__subtitle">Custom Static Website</h3>
+                <h3 class="card__subtitle">Custom Static Site</h3>
                 <hr />
                 <p class="card__lang-text">
                   HTML / SCSS / JS Parallax
@@ -167,13 +167,49 @@
           <div class="cards-block">
             <div class="card">
               <img
+                src="img/saintlorem-wp.png"
+                alt="Saint Lorem WordPress Site"
+                class="card__img"
+              />
+              <div class="card__details">
+                <h2 class="card__title">Saint Lorem Real Estate</h2>
+                <h3 class="card__subtitle">Custom Wordpress Site</h3>
+                <hr />
+                <p class="card__lang-text">
+                  WordPress / Bootstrap / PHP
+                </p>
+                <p class="card__text">
+                  A custom WordPress site for a real estate firm.
+                </p>
+                <div class="btn-container margin-top-s">
+                  <a
+                    href="https://www.saintlorem.com"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Demo</a
+                  >
+                  <a
+                    href="https://github.com/mega-bailey/real-estate-wptheme"
+                    target="_blank"
+                    class="btn btn__text"
+                  >
+                    Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cards-block">
+            <div class="card">
+              <img
                 src="img/six-sense.png"
                 alt="Six Sense ecommerce site"
                 class="card__img"
               />
               <div class="card__details">
                 <h2 class="card__title">Six Sense</h2>
-                <h3 class="card__subtitle">Ecommerce Website</h3>
+                <h3 class="card__subtitle">Ecommerce Site</h3>
                 <hr />
                 <p class="card__lang-text">
                   HTML / SCSS / JS
@@ -209,7 +245,7 @@
               />
               <div class="card__details">
                 <h2 class="card__title">Union Hill</h2>
-                <h3 class="card__subtitle">Custom Static Website</h3>
+                <h3 class="card__subtitle">Custom Static Site</h3>
                 <hr />
                 <p class="card__lang-text">
                   HTML / SCSS
@@ -236,42 +272,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="cards-block">
-            <div class="card">
-              <img
-                src="img/build-it.png"
-                alt="Build It PHP App"
-                class="card__img"
-              />
-              <div class="card__details">
-                <h2 class="card__title">Build It</h2>
-                <h3 class="card__subtitle">PHP & MySQL Site-App</h3>
-                <hr />
-                <p class="card__lang-text">
-                  HTML / CSS / Materialize / PHP / MySQL
-                </p>
-                <p class="card__text">
-                  Add exercises to a database to build your own workout session.
-                </p>
-                <div class="btn-container margin-top-s">
-                  <a
-                    href=""
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Demo</a
-                  >
-                  <a
-                    href=""
-                    target="_blank"
-                    class="btn btn__text"
-                  >
-                    Code</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div> -->
           <div class="cards-block">
             <div class="card">
               <img
