--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <div class="column">
             <p class="paragraph">
               <span class="bold"
-                >I'm currently looking for a remote technical or developer
-                support role.
+                >I'm currently looking for a remote customer support or
+                technical support role.
               </span>
               I'd like to apply my experience in both customer service and web
               development, while continuing to learn and expand my developer
