--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 technical support role.
               </span>
               I'd like to apply my experience in both customer service and web
-              development, while continuing to learn and expand my developer
-              skills. I am a level-headed, positive-minded, self-motivated, and
-              resourceful person.
+              development, while continuing to learn and expand my skills. I am
+              a level-headed, positive-minded, self-motivated, and resourceful
+              person.
             </p>
           </div>
         </div>
