--- a/index.html
+++ b/index.html
@@ -55,57 +55,42 @@
     <header class="header">
       <h1 class="heading-primary">Hi, I'm Megan Bailey</h1>
       <p class="paragraph">
-        I'm a front-end web developer and designer<br />
-        with loads of experience in customer service.
+        I'm a web developer and a software 
+        support specialist.
       </p>
+
     </header>
 
     <main>
       <!-- ABOUT SECTION -->
       <section class="section-about" id="about">
-        <div class="row">
+       <!--  <div class="row">
           <div class="column">
             <p class="paragraph">
-              With over 10 years of providing genuine and exceptional customer
-              service, I am committed to the customer’s experience and ensuring
-              that they feel understood and genuinely appreciated. Great
-              customer service can make a truly positive impact for both the
-              company and customers, I strive for that win-win situation to
-              problem-solving.
+              yada
             </p>
           </div>
 
           <div class="column">
             <p class="paragraph">
-              I design and build custom sites, including custom WordPress themes
-              and sites. I have a solid understanding of HTML, CSS, SASS, Git,
-              WordPress, Photoshop, and Illustrator. I also have a great
-              foundational understanding of PHP, Javascript, jQuery, and
-              InDesign. I am forever learning.
+              yada
             </p>
           </div>
 
           <div class="column">
             <p class="paragraph">
-              <span class="bold"
-                >I'm currently looking for a remote customer support or
-                technical support role.
-              </span>
-              I'd like to apply my experience in both customer service and web
-              development, while continuing to learn and expand my skills. I am
-              a level-headed, positive-minded, self-motivated, and resourceful
-              person.
+              <span class="bold"> </span>
+              yada
             </p>
           </div>
-        </div>
-      </section>
+        </div>-->
+      </section> 
 
       <!-- CONTACT BLOCK -->
       <section class="section-contact">
         <div class="contact-block">
           <p class="paragraph">
-            If you think I'd be a great fit for your company, or if I can help
-            you build something, I'd love to hear from you.
+            Have any questions, or would like to work together? Shoot me an email.
           </p>
 
           <a href="mailto:megan-bailey@outlook.com" class="contact-block__link"
@@ -352,8 +337,7 @@
       <section class="section-contact">
         <div class="contact-block">
           <p class="paragraph">
-            Have any questions, or would like to work together? Shoot me an
-            email.
+            Questions, comments, kudos, or concerns? Email me.
           </p>
 
           <a href="mailto:megan-bailey@outlook.com" class="contact-block__link"
