--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               </div>
             </div>
           </div>
-          <div class="cards-block">
+          <!-- <div class="cards-block">
             <div class="card">
               <img
                 src="img/saintlorem-wp.png"
@@ -184,7 +184,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="cards-block">
             <div class="card">
               <img
